--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <link rel= "Normalizer" href= "css/normalizer.css"/>
     <link rel= "stylesheet" href= "css/stylesheetresume.css"/>
+    <link rel= "icon" type="image/x-icon" href="images/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 </head>
