Fixing spacing, put something in tablet

--- a/first.html
+++ b/first.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
 </head>
-<body class="myfirst">
+<body class="bodywork">
   <nav>
     <a href=index.html><img src="images/Artboard 1.svg" alt="logo" class="logo"></a>
         <ul class="navlist">
@@ -15,20 +15,20 @@
             <li><a href=works.html class="navwork">Work</a></li>
         </ul>
  </nav>
-<div class="casestudy">
-  <h1>My First Prototype</h1>
+  <div class="casestudy">
+    <h1>My First Prototype</h1>
 
-  <div class="task">
-    <h2>My Task</h2>
-    <img src="images/casestew-1.png" alt="card sort">
-    <p>For this project, we were to create a proper prototype for a website, and for me the website in question was Gamepress, 
+    <div class="task">
+      <h2>My Task</h2>
+      <img src="images/casestew-1.png" alt="card sort">
+      <p>For this project, we were to create a proper prototype for a website, and for me the website in question was Gamepress, 
         A site for mobile games with an emphasis on strategy. My focus was on the Pokemon Go portion of the page, since the whole site 
         was a bit big.</p>
-    </div>
- <div class="middle">
-    <h2>Creating a Sitemap</h2>
-    <img src="images/screencapture-docs-google-com-presentation-d-1q094prlov5si58urvfcnhd73stojvdn-rtqjw1xroac-edit-1583786770407.png" alt="sitemap">
-    <p>      
+      </div>
+    <div class="middle">
+      <h2>Creating a Sitemap</h2>
+      <img src="images/screencapture-docs-google-com-presentation-d-1q094prlov5si58urvfcnhd73stojvdn-rtqjw1xroac-edit-1583786770407.png" alt="sitemap">
+      <p>      
         To start, I was instructed to do a case study with about three people and use the information gleaned off of that to make a
         sitemap to illustrate the general structure of the site. I had trouble finding people to do this project, as I still had
         yet to really make solid friends (first term nerves and all that). Luckily I was able to get over it and get some 
@@ -36,7 +36,7 @@
         sitemap was good; it made it easy to line things up and make a simple looking map. However, they also had some high costs 
         on services. Thankfully, I was okay to buy it, but it made me realize that Web Designers get paid so well for a reason, 
         apparently.</p>
-    </div>
+      </div>
 
 
   <div class="ending">
