--- a/reddit.html
+++ b/reddit.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
 </head>
-<body class="myfirst">
+<body class="bodywork">
   <nav>
     <a href=index.html><img src="images/Artboard 1.svg" alt="logo" class="logo"></a>
         <ul class="navlist">
