--- a/works.html
+++ b/works.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
 </head>
-<body class="work">
+<body class="bodywork">
   <nav>
     <a href=index.html><img src="images/Artboard 1.svg" alt="logo" class="logo"></a>
         <ul class="navlist">
@@ -16,21 +16,30 @@
         </ul>
  </nav>
 <div class="workbody">
-  <h1>My works</h1>
-  <div class="first">
-    <a href=first.html><h2>My First Prototype</h2>
-    <img src="images/web-1280-e28093-1.png" alt="finished prototype">
-    <p>Have a look at my first attempt at wireframes, sitemaps, and other things.</p></a>
+  <div class="items">
+    <div class="title">
+    <h1>My works</h1>
     </div>
- <div class="redesign">
-    <a href=reddit.html><h2>Redesigning Reddit</h2>
-    <img src="images/IDM-213-001_Rebranding-Edit_pcn23.png" alt="Rebranding">
-    <p>Another expedition into the prototyping process, but now with the added task of redesigning the whole brand.</p></a>
+    <div class="first">
+      <a href=first.html><h2>My First Prototype</h2>
+      <picture>
+        <source media="(min-width: 520px)" srcset="images/HomePoGo_Large.png">
+        <img src="images/web-1280-e28093-1.png" alt="finished prototype">
+        </picture>
+        <p>Have a look at my first attempt at wireframes, sitemaps, and other things.</p></a>
     </div>
-  <div class="teado">
-    <a href=teado.html><h2>Redesigning Tea-Do</h2>
-    <img src="images/Contact.png" alt="homepage">
-    <p>A team effort to create a redesign for a boba tea shop in Philadelphia.</p></a>
+    <div class="redesign">
+      <a href=reddit.html><h2>Redesigning Reddit</h2>
+      <img src="images/IDM-213-001_Rebranding-Edit_pcn23.png" alt="Rebranding">
+      <p>Another expedition into the prototyping process, but now with the added task of redesigning the whole brand.</p></a>
     </div>
+    <div class="teado">
+      <a href=teado.html><h2>Redesigning Tea-Do</h2>
+      <picture>
+        <source media="(min-width: 520px)" srcset="images/contact_large.png">
+      <img src="images/Contact.png" alt="homepage">
+      <p>A team effort to create a redesign for a boba tea shop in Philadelphia.</p></a>
+    </div>
+  </div>
 </div>
 </body>
