messed with case studies, more gird

--- a/teado.html
+++ b/teado.html
@@ -16,7 +16,7 @@
         </ul>
  </nav>
 <div class="casestudy">
-  <h1>Redesigning Tea-Do</h1>
+  <h1 class="title">Redesigning Tea-Do</h1>
 
   <div class="task">
     <h2>Our task</h2>
@@ -26,9 +26,9 @@
       we could build our design around fixing the issues testers had with the site.</p>
     </div>
  <div class="middle">
-    <h2>User Testing</h2>
-    <img src="images/usertesting.png" alt="user testing">
-    <p>      
+    <h2 class="midp">User Testing</h2>
+    <img src="images/usertesting.png" alt="user testing" class="midpic">
+    <p class="midp">      
       We used Usertesting.com to create our test. We wanted to ask the user to do things that would be close to what a normal user 
       would go on the website for. Thus, we asked them to do things like looking at a menu, finding a drink, and getting information 
       on their locations. Through these tests, we found that the website was really confusing for users, especially when it came to 
@@ -38,9 +38,9 @@
 
 
   <div class="ending">
-    <h2>Tea-mwork makes the website work</h2>
-    <img src="images/Contact.png" alt="contact page">
-    <p>Going off of this information, we got to work on creating the prototype. We had pretty good teamwork and we were able to get
+    <h2 class="endp">Tea-mwork makes the website work</h2>
+    <img src="images/Contact.png" alt="contact page" class="endpic">
+    <p class="endp">Going off of this information, we got to work on creating the prototype. We had pretty good teamwork and we were able to get
       through the work with relative ease (though it may have gone a bit late into the night). We decided it would be a good idea 
       to add an order menu for people to put in an order online, as well as a contact page where you could find their social accounts 
       and send an email to the business. We also redesigned the menus to show the prices, and in the ordering service, you would be 
