Fixing the case study pages

--- a/first.html
+++ b/first.html
@@ -20,14 +20,18 @@
 
     <div class="task">
       <h2>My Task</h2>
-      <img src="images/casestew-1.png" alt="card sort">
+      <picture>
+        <source media="(min-width: 520px)" srcset="images/casestew_large.svg">
+        <img src="images/casestew-1.png" alt="card sort">
       <p>For this project, we were to create a proper prototype for a website, and for me the website in question was Gamepress, 
         A site for mobile games with an emphasis on strategy. My focus was on the Pokemon Go portion of the page, since the whole site 
         was a bit big.</p>
       </div>
     <div class="middle">
       <h2>Creating a Sitemap</h2>
-      <img src="images/screencapture-docs-google-com-presentation-d-1q094prlov5si58urvfcnhd73stojvdn-rtqjw1xroac-edit-1583786770407.png" alt="sitemap">
+      <picture>
+        <source media="(min-width: 520px)" srcset="images/sitemap_large.svg">
+        <img src="images/screencapture-docs-google-com-presentation-d-1q094prlov5si58urvfcnhd73stojvdn-rtqjw1xroac-edit-1583786770407.png" alt="sitemap">
       <p>      
         To start, I was instructed to do a case study with about three people and use the information gleaned off of that to make a
         sitemap to illustrate the general structure of the site. I had trouble finding people to do this project, as I still had
@@ -41,7 +45,10 @@
 
   <div class="ending">
     <h2>Wireframes and I: A Rough Relationship</h2>
-    <img src="images/web-1280-e28093-1.png" alt="finished prototype">
+    <picture>
+      <source media="(min-width: 520px)" srcset="images/HomePoGo_Large.png">
+      <img src="images/web-1280-e28093-1.png" alt="finished prototype">
+      </picture>
     <p>Next it was time to come up with some ideas for wireframes. This wasn't too bad, as I could do it on paper. This meant I 
         could just draw it up when inspiration hit. This would have been nice, had inspiration decided to hit a bit more often than 
         it did. This lead to me spending many days just trying to figure out what to put down. Eventually, I ended up filling the 
