Adding in responsive images, messing with the about me

--- a/reddit.html
+++ b/reddit.html
@@ -20,7 +20,12 @@
 
   <div class="task">
     <h2>My Task</h2>
-    <img src="images/IDM-213-01-pcn23(edit).png" alt="app flow">
+    <picture>
+      <source media="(min-width: 500px)" type="image/svg" srcset="images/appflow_large.svg">
+      <source type="image/svg" srcset="images/appflow_small.svg">
+      <source media="(min-width: 500px)" srcset="images/appflow_large.png">
+      <img src="images/appflow_small.png" alt="app flow">
+    </picture>
     <p>For this project, we were to create a complete redesign of an app, including prototypes and micro-interactions. I was 
       redesigning Reddit, an app focused on connecting users via communities. I really wanted to lean into a space concept, as 
       users post content that circulate through communities like how planets revolve around a star in a solar system. To start, I 
@@ -28,7 +33,12 @@
     </div>
  <div class="middle">
     <h2>Making a plan</h2>
-    <img src="images/IDM-213-001_Rebranding-Edit_pcn23.png" alt="rebranding">
+    <picture>
+      <source media="(min-width: 500px)" type="image/svg" srcset="images/rebrand_large.svg">
+      <source type="image/svg" srcset="images/rebrand_small.svg">
+      <source media="(min-width: 500px)" srcset="images/rebrand_large.png">
+      <img src="images/rebrand_small.png" alt="rebranding">
+    </picture>
     <p>      
       So I had an idea of what I should do, but how would I start to accomplish the goal I had set? I made a plan by creating an 
       app flow of my own, as well as a rebranding document describing the changes I wanted to make for my app. Planning out the app 
