--- a/teado.html
+++ b/teado.html
@@ -20,14 +20,22 @@
 
   <div class="task">
     <h2>Our task</h2>
-    <img src="images/originalsite.png" alt="original site">
+    <picture>
+      <source type="image/svg" srcset="images/originalsite.svg">
+      <img src="images/originalsite.png" alt="original site">
+    </picture>
     <p>For this project, My group and I were to collaborate to prototype a redesign for a website. We chose to do our project on a 
       website for the bubble tea restaurant, Tea-Do. We wanted to gather test research on how the website functioned for the user so 
       we could build our design around fixing the issues testers had with the site.</p>
     </div>
  <div class="middle">
     <h2 class="midp">User Testing</h2>
-    <img src="images/usertesting.png" alt="user testing" class="midpic">
+    <picture>
+    <source media="(min-width: 500px)" type="image/svg" srcset="images/usertesting_large.svg">
+    <source type="image/svg" srcset="images/usertesting_small.svg">
+    <source media="(min-width: 500px)" srcset="images/usertesting_large.png">
+    <img src="images/usertesting_small.png" alt="user testing" class="midpic">
+    </picture>
     <p class="midp">      
       We used Usertesting.com to create our test. We wanted to ask the user to do things that would be close to what a normal user 
       would go on the website for. Thus, we asked them to do things like looking at a menu, finding a drink, and getting information 
@@ -39,7 +47,12 @@
 
   <div class="ending">
     <h2 class="endp">Tea-mwork makes the website work</h2>
-    <img src="images/Contact.png" alt="contact page" class="endpic">
+    <picture>
+      <source media="(min-width: 500px)" type="image/svg" srcset="images/contact_large.svg">
+      <source type="image/svg" srcset="images/contact_small.svg">
+      <source media="(min-width: 500px)" srcset="images/contact_large.png">
+      <img src="images/contact_small.png" alt="homepage">
+    </picture>
     <p class="endp">Going off of this information, we got to work on creating the prototype. We had pretty good teamwork and we were able to get
       through the work with relative ease (though it may have gone a bit late into the night). We decided it would be a good idea 
       to add an order menu for people to put in an order online, as well as a contact page where you could find their social accounts 
