--- a/first.html
+++ b/first.html
@@ -19,10 +19,14 @@
     <h1>My First Prototype</h1>
 
     <div class="task">
-      <h2>My Task</h2>
+      <div class=titlecs>
+        <h2>My Task</h2>
+      </div>
       <picture>
-        <source media="(min-width: 520px)" srcset="images/casestew_large.svg">
-        <img src="images/casestew-1.png" alt="card sort">
+        <source media="(min-width: 500px)" type="image/svg" srcset="images/casestew_large.svg">
+        <source type="image/svg" srcset="image/casestew_small.svg">
+        <source media="(min-width: 500px)" srcset="images/casestew_large.png">
+        <img src="images/casestew_small.png" alt="card sort">
       <p>For this project, we were to create a proper prototype for a website, and for me the website in question was Gamepress, 
         A site for mobile games with an emphasis on strategy. My focus was on the Pokemon Go portion of the page, since the whole site 
         was a bit big.</p>
@@ -30,8 +34,11 @@
     <div class="middle">
       <h2>Creating a Sitemap</h2>
       <picture>
-        <source media="(min-width: 520px)" srcset="images/sitemap_large.svg">
-        <img src="images/screencapture-docs-google-com-presentation-d-1q094prlov5si58urvfcnhd73stojvdn-rtqjw1xroac-edit-1583786770407.png" alt="sitemap">
+        <source media="(min-width: 500px)" type="image/svg" srcset="images/sitemap_large.svg">
+        <source type="image/svg" srcset="images/sitemap_small.svg">
+        <source media="(min-width: 500px)" srcset="images/sitemap_large.png">
+        <img src="images/sitemap_small.png" alt="sitemap">
+      </picture>
       <p>      
         To start, I was instructed to do a case study with about three people and use the information gleaned off of that to make a
         sitemap to illustrate the general structure of the site. I had trouble finding people to do this project, as I still had
@@ -46,9 +53,11 @@
   <div class="ending">
     <h2>Wireframes and I: A Rough Relationship</h2>
     <picture>
-      <source media="(min-width: 520px)" srcset="images/HomePoGo_Large.png">
-      <img src="images/web-1280-e28093-1.png" alt="finished prototype">
-      </picture>
+      <source media="(min-width: 500px)" type="image/svg" srcset="images/homepogo_large.svg">
+      <source type="image/svg" srcset="images/homepogo_small.svg">
+      <source media="(min-width: 500px)" srcset="images/homepogo_large.png">
+      <img src="images/homepogo_small.png" alt="finished prototype">
+    </picture>
     <p>Next it was time to come up with some ideas for wireframes. This wasn't too bad, as I could do it on paper. This meant I 
         could just draw it up when inspiration hit. This would have been nice, had inspiration decided to hit a bit more often than 
         it did. This lead to me spending many days just trying to figure out what to put down. Eventually, I ended up filling the 
