--- a/works.html
+++ b/works.html
@@ -23,21 +23,31 @@
     <div class="first">
       <a href=first.html><h2>My First Prototype</h2>
       <picture>
-        <source media="(min-width: 520px)" srcset="images/HomePoGo_Large.png">
-        <img src="images/web-1280-e28093-1.png" alt="finished prototype">
+        <source media="(min-width: 500px)" type="image/svg" srcset="images/homepogo_large.svg">
+        <source type="image/svg" srcset="images/homepogo_small.svg">
+        <source media="(min-width: 500px)" srcset="images/homepogo_large.png">
+        <img src="images/homepogo_small.png" alt="finished prototype">
         </picture>
         <p>Have a look at my first attempt at wireframes, sitemaps, and other things.</p></a>
     </div>
     <div class="redesign">
       <a href=reddit.html><h2>Redesigning Reddit</h2>
-      <img src="images/IDM-213-001_Rebranding-Edit_pcn23.png" alt="Rebranding">
+        <picture>
+          <source media="(min-width: 500px)" type="image/svg" srcset="images/rebrand_large.svg">
+          <source type="image/svg" srcset="images/rebrand_small.svg">
+          <source media="(min-width: 500px)" srcset="images/rebrand_large.png">
+          <img src="images/rebrand_small.png" alt="rebranding">
+        </picture>
       <p>Another expedition into the prototyping process, but now with the added task of redesigning the whole brand.</p></a>
     </div>
     <div class="teado">
       <a href=teado.html><h2>Redesigning Tea-Do</h2>
       <picture>
-        <source media="(min-width: 520px)" srcset="images/contact_large.png">
-      <img src="images/Contact.png" alt="homepage">
+        <source media="(min-width: 500px)" type="image/svg" srcset="images/contact_large.svg">
+        <source type="image/svg" srcset="images/contact_small.svg">
+        <source media="(min-width: 500px)" srcset="images/contact_large.png">
+        <img src="images/contact_small.png" alt="homepage">
+      </picture>
       <p>A team effort to create a redesign for a boba tea shop in Philadelphia.</p></a>
     </div>
   </div>
