Added video instead of gif, fixed original site pic

--- a/first.html
+++ b/first.html
@@ -16,8 +16,9 @@
         </ul>
  </nav>
   <div class="casestudy">
-    <h1>My First Prototype</h1>
-
+    <div class="titlecs">
+      <h1>My First Prototype</h1>
+    </div>
     <div class="task">
       <div class=titlecs>
         <h2>My Task</h2>
