--- a/reddit.html
+++ b/reddit.html
@@ -16,7 +16,9 @@
         </ul>
  </nav>
 <div class="casestudy">
-  <h1>Redesigning Reddit</h1>
+  <div class="titlecs">
+    <h1>Redesigning Reddit</h1>
+  </div>
 
   <div class="task">
     <h2>My Task</h2>
@@ -50,7 +52,10 @@
 
   <div class="ending">
     <h2>Blasting off with animation</h2>
-    <img src="images/IDM-213-01-Anim-002-pcn23.gif" alt="finished animation">
+    <video controls>
+      <source src="images/appload.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
     <p>With a plan in place and my assets ready, all I had left to do was to animate the micro-interactions. For this project, I 
       used After Effects to create animations. Figuring how to work with the layers was a bit challenging, but I got some help from 
       my professor at the time and with his help, I was able to figure out how to resolve most of the issues.</p>
