Fixing image files to correctly size up

--- a/first.html
+++ b/first.html
@@ -20,14 +20,10 @@
       <h1>My First Prototype</h1>
     </div>
     <div class="task">
-      <div class=titlecs>
-        <h2>My Task</h2>
-      </div>
+      <h2>My Task</h2>
       <picture>
-        <source media="(min-width: 500px)" type="image/svg" srcset="images/casestew_large.svg">
-        <source type="image/svg" srcset="image/casestew_small.svg">
-        <source media="(min-width: 500px)" srcset="images/casestew_large.png">
-        <img src="images/casestew_small.png" alt="card sort">
+        <img srcset="images/casestew3x.png 1029w, images/casestew2x.png 686w, images/casestew.png 343w" sizes="(min-width: 960px) 58.6vw, (min-width: 500px) 66.6vw, 100%" src="images/casestew_small.png" alt="card sort">
+      </picture>
       <p>For this project, we were to create a proper prototype for a website, and for me the website in question was Gamepress, 
         A site for mobile games with an emphasis on strategy. My focus was on the Pokemon Go portion of the page, since the whole site 
         was a bit big.</p>
@@ -35,10 +31,7 @@
     <div class="middle">
       <h2>Creating a Sitemap</h2>
       <picture>
-        <source media="(min-width: 500px)" type="image/svg" srcset="images/sitemap_large.svg">
-        <source type="image/svg" srcset="images/sitemap_small.svg">
-        <source media="(min-width: 500px)" srcset="images/sitemap_large.png">
-        <img src="images/sitemap_small.png" alt="sitemap">
+        <img srcset="images/sitemap3x.png 1029w, images/sitemap2x.png 686w, images/sitemap.png 343w" sizes="(min-width: 960px) 38.4vw, (min-width: 500px) 96vw, 100%" src="images/sitemap_small.png" alt="sitemap">
       </picture>
       <p>      
         To start, I was instructed to do a case study with about three people and use the information gleaned off of that to make a
@@ -54,10 +47,7 @@
   <div class="ending">
     <h2>Wireframes and I: A Rough Relationship</h2>
     <picture>
-      <source media="(min-width: 500px)" type="image/svg" srcset="images/homepogo_large.svg">
-      <source type="image/svg" srcset="images/homepogo_small.svg">
-      <source media="(min-width: 500px)" srcset="images/homepogo_large.png">
-      <img src="images/homepogo_small.png" alt="finished prototype">
+      <img srcset="images/homepogo3x.png 1029w, images/homepogo2x.png 686w, images/homepogo.png 343w" sizes="(min-width: 960px) 56.7vw, (min-width: 500px) 96vw, 100%" src="images/homepogo_small.png" alt="finished prototype">
     </picture>
     <p>Next it was time to come up with some ideas for wireframes. This wasn't too bad, as I could do it on paper. This meant I 
         could just draw it up when inspiration hit. This would have been nice, had inspiration decided to hit a bit more often than 
