--- a/teado.html
+++ b/teado.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bodywork">
   <nav>
-    <a href=index.html><img src="Images/Artboard 1.svg" alt="logo" class="logo"></a>
+    <a href=index.html><img src="images/Artboard 1.svg" alt="logo" class="logo"></a>
         <ul class="navlist">
             <li><a href=about_me.html class="navabout">About</a></li>
             <li><a href=resume.html class="navresume">Resume</a></li>
@@ -23,10 +23,7 @@
       <h2>Our task</h2>
     </div>
     <picture>
-      <source media="(min-width: 500px)" type="image/svg" srcset="images/originalsite_large.svg">
-      <source type="image/svg" srcset="images/originalsite_small.svg">
-      <source media="(min-width:500px)" srcset="images/originalsite_large.png">
-      <img src="images/originalsite_small.png" alt="original site">
+      <img srcset="images/originalsite3x.png 1029w, images/originalsite2x.png 686w, images/originalsite1x.png 343w" sizes="(min-width: 960px) 58.6vw, (min-width: 500px) 62.2vw, 100%" src="images/originalsite_small.png" alt="original site">
     </picture>
     <p>For this project, My group and I were to collaborate to prototype a redesign for a website. We chose to do our project on a 
       website for the bubble tea restaurant, Tea-Do. We wanted to gather test research on how the website functioned for the user so 
@@ -35,10 +32,7 @@
  <div class="middle">
     <h2 class="midp">User Testing</h2>
     <picture>
-    <source media="(min-width: 500px)" type="image/svg" srcset="images/usertesting_large.svg">
-    <source type="image/svg" srcset="images/usertesting_small.svg">
-    <source media="(min-width: 500px)" srcset="images/usertesting_large.png">
-    <img src="images/usertesting_small.png" alt="user testing" class="midpic">
+    <img srcset="images/usertesting3x.png 1029w, images/usertesting2x.png 686w, images/usertesting.png 343w" sizes="(min-width: 960px) 38.4vw, (min-width: 500px) 96vw, 100%" src="images/usertesting_small.png" alt="user testing" class="midpic">
     </picture>
     <p class="midp">      
       We used Usertesting.com to create our test. We wanted to ask the user to do things that would be close to what a normal user 
@@ -52,10 +46,7 @@
   <div class="ending">
     <h2 class="endp">Tea-mwork makes the website work</h2>
     <picture>
-      <source media="(min-width: 500px)" type="image/svg" srcset="images/contact_large.svg">
-      <source type="image/svg" srcset="images/contact_small.svg">
-      <source media="(min-width: 500px)" srcset="images/contact_large.png">
-      <img src="images/contact_small.png" alt="homepage">
+      <img srcset="images/contact3x.png 1029w, images/contact2x.png 686w, images/contact.png 343w" sizes="(min-width: 960px) 56.7vw, (min-width: 500px) 96vw, 100%" src="images/contact_small.png" alt="homepage">
     </picture>
     <p class="endp">Going off of this information, we got to work on creating the prototype. We had pretty good teamwork and we were able to get
       through the work with relative ease (though it may have gone a bit late into the night). We decided it would be a good idea 
