--- a/works.html
+++ b/works.html
@@ -23,30 +23,21 @@
     <div class="first">
       <a href=first.html><h2>My First Prototype</h2>
       <picture>
-        <source media="(min-width: 500px)" type="image/svg" srcset="images/homepogo_large.svg">
-        <source type="image/svg" srcset="images/homepogo_small.svg">
-        <source media="(min-width: 500px)" srcset="images/homepogo_large.png">
-        <img src="images/homepogo_small.png" alt="finished prototype">
-        </picture>
-        <p>Have a look at my first attempt at wireframes, sitemaps, and other things.</p></a>
+        <img srcset="images/homepogo3x.png 1029w, images/homepogo2x.png 686w, images/homepogo.png 343w" sizes="(min-width: 960px) 30vw, (min-width: 500px) 47vw, 100%" src="images/homepogo_small.png" alt="finished prototype">
+      </picture>
+      <p>Have a look at my first attempt at wireframes, sitemaps, and other things.</p></a>
     </div>
     <div class="redesign">
       <a href=reddit.html><h2>Redesigning Reddit</h2>
         <picture>
-          <source media="(min-width: 500px)" type="image/svg" srcset="images/rebrand_large.svg">
-          <source type="image/svg" srcset="images/rebrand_small.svg">
-          <source media="(min-width: 500px)" srcset="images/rebrand_large.png">
-          <img src="images/rebrand_small.png" alt="rebranding">
+          <img srcset="images/rebrand3x.png 1029w, images/rebrand2x.png 686w, images/rebrand.png" sizes="(min-width: 960px) 30vw, (min-width: 500px) 47vw, 100%"src="images/rebrand_small.png" alt="rebranding">
         </picture>
       <p>Another expedition into the prototyping process, but now with the added task of redesigning the whole brand.</p></a>
     </div>
     <div class="teado">
       <a href=teado.html><h2>Redesigning Tea-Do</h2>
       <picture>
-        <source media="(min-width: 500px)" type="image/svg" srcset="images/contact_large.svg">
-        <source type="image/svg" srcset="images/contact_small.svg">
-        <source media="(min-width: 500px)" srcset="images/contact_large.png">
-        <img src="images/contact_small.png" alt="homepage">
+        <img srcset="images/contact3x.png 1029w, images/contact2x.png 686w, images/contact.png 343w" sizes="(min-width: 960px) 63vw, (min-width: 500px) 96vw, 100%" src="images/contact_small.png" alt="homepage">
       </picture>
       <p>A team effort to create a redesign for a boba tea shop in Philadelphia.</p></a>
     </div>
