Troubleshooting night yall

--- a/first.html
+++ b/first.html
@@ -5,6 +5,7 @@
   <link rel= "icon" type="image/x-icon" href="images/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
+  <title>First Prototype</title>
 </head>
 <body class="bodywork">
   <nav>
@@ -22,7 +23,7 @@
     <div class="task">
       <h2>My Task</h2>
       <picture>
-        <img srcset="images/casestew3x.png 1029w, images/casestew2x.png 686w, images/casestew.png 343w" sizes="(min-width: 960px) 58.6vw, (min-width: 500px) 66.6vw, 100%" src="images/casestew_small.png" alt="card sort">
+        <img srcset="images/casestew3x.png 1029w, images/casestew2x.png 686w, images/casestew.png 343w" sizes="(min-width: 960px) 58.5vw, (min-width: 500px) 66.6vw, 100%" src="images/casestew_small.png" alt="card sort">
       </picture>
       <p>For this project, we were to create a proper prototype for a website, and for me the website in question was Gamepress, 
         A site for mobile games with an emphasis on strategy. My focus was on the Pokemon Go portion of the page, since the whole site 
