--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel= "icon" type="image/x-icon" href="images/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
+    <title>Home</title>
 </head>
 <body class="home">
 <nav>
@@ -19,6 +20,6 @@
  <h1 class="welcome">Parker Nix</h1>
     <p class="hey">
     Hey! welcome to my website, where I have lots of things to say!
-</p>
+    </p>
 </div>
 </body>
