--- a/teado.html
+++ b/teado.html
@@ -5,6 +5,7 @@
   <link rel= "icon" type="image/x-icon" href="images/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
+  <title>Redesigning Tea-do</title>
 </head>
 <body class="bodywork">
   <nav>
@@ -23,7 +24,7 @@
       <h2>Our task</h2>
     </div>
     <picture>
-      <img srcset="images/originalsite3x.png 1029w, images/originalsite2x.png 686w, images/originalsite1x.png 343w" sizes="(min-width: 960px) 58.6vw, (min-width: 500px) 62.2vw, 100%" src="images/originalsite_small.png" alt="original site">
+      <img srcset="images/originalsite3x.png 1029w, images/originalsite2x.png 686w, images/originalsite1x.png 343w" sizes="(min-width: 960px) 58.5vw, (min-width: 500px) 62.2vw, 100%" src="images/originalsite_small.png" alt="original site">
     </picture>
     <p>For this project, My group and I were to collaborate to prototype a redesign for a website. We chose to do our project on a 
       website for the bubble tea restaurant, Tea-Do. We wanted to gather test research on how the website functioned for the user so 
