--- a/works.html
+++ b/works.html
@@ -5,6 +5,7 @@
   <link rel= "icon" type="image/x-icon" href="images/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
+  <title>Work</title>
 </head>
 <body class="bodywork">
   <nav>
@@ -37,7 +38,7 @@
     <div class="teado">
       <a href=teado.html><h2>Redesigning Tea-Do</h2>
       <picture>
-        <img srcset="images/contact3x.png 1029w, images/contact2x.png 686w, images/contact.png 343w" sizes="(min-width: 960px) 64.4vw, (min-width: 500px) 96vw, 100%" src="images/contact_small.png" alt="homepage">
+        <img srcset="images/contact3x.png 1029w, images/contact2x.png 686w, images/contact.png 343w" sizes="(min-width: 960px) 64.1vw, (min-width: 500px) 96vw, 100%" src="images/contact_small.png" alt="homepage">
       </picture>
       <p>A team effort to create a redesign for a boba tea shop in Philadelphia.</p></a>
     </div>
