--- a/reddit.html
+++ b/reddit.html
@@ -5,6 +5,7 @@
   <link rel= "icon" type="image/x-icon" href="images/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
+  <title>Redesigning Reddit</title>
 </head>
 <body class="bodywork">
   <nav>
