adding quotes to href boiz

--- a/resume.html
+++ b/resume.html
@@ -9,16 +9,16 @@
 </head>
 <body class="resumepage">
     <nav id="nav">
-        <a href=index.html><img src="images/Artboard 1.svg" alt="logo" class="logo"></a>
+        <a href="index.html"><img src="images/Artboard 1.svg" alt="logo" class="logo"></a>
             <ul class="navlist">
-                <li><a href=about_me.html class="navabout">About</a></li>
-                <li><a href=resume.html class="navresume">Resume</a></li>
-                <li><a href=works.html class="navwork">Work</a></li>
+                <li><a href="about_me.html" class="navabout">About</a></li>
+                <li><a href="resume.html" class="navresume">Resume</a></li>
+                <li><a href="works.html" class="navwork">Work</a></li>
             </ul>
      </nav>
     <div class="resumebody">
      <div class="Intro">
-    <h1 id=top>Resume</h1>
+    <h1 id="top">Resume</h1>
     <p>
         Email: pcn23@drexel.edu
     </p>
@@ -79,7 +79,7 @@
         <li>Proficient in Microsoft 360 products and Adobe Suite products</li>
         <li>Capable of coding in HTML/CSS</li>
     </ul>
-    <a href=#top><img src="images/backtotop.png" alt="back to top"></a>
+    <a href="#top"><img src="images/backtotop.png" alt="back to top"></a>
     </div>
     </div>
 </body>
