--- a/about_me.html
+++ b/about_me.html
@@ -9,11 +9,11 @@
 </head>
 <body class="aboutpage">
     <nav>
-        <a href=index.html><img src="images/Artboard 1.svg" alt="logo" class="logo"></a>
+        <a href="index.html"><img src="images/Artboard 1.svg" alt="logo" class="logo"></a>
             <ul class="navlist">
-                <li><a href=about_me.html class="navabout">About</a></li>
-                <li><a href=resume.html class="navresume">Resume</a></li>
-                <li><a href=works.html class="navwork">Work</a></li>
+                <li><a href="about_me.html" class="navabout">About</a></li>
+                <li><a href="resume.html" class="navresume">Resume</a></li>
+                <li><a href="works.html" class="navwork">Work</a></li>
             </ul>
      </nav>
     <div class="aboutmoi">
