--- a/works.html
+++ b/works.html
@@ -9,11 +9,11 @@
 </head>
 <body class="bodywork">
   <nav>
-    <a href=index.html><img src="images/Artboard 1.svg" alt="logo" class="logo"></a>
+    <a href="index.html"><img src="images/Artboard 1.svg" alt="logo" class="logo"></a>
         <ul class="navlist">
-            <li><a href=about_me.html class="navabout">About</a></li>
-            <li><a href=resume.html class="navresume">Resume</a></li>
-            <li><a href=works.html class="navwork">Work</a></li>
+            <li><a href="about_me.html" class="navabout">About</a></li>
+            <li><a href="resume.html" class="navresume">Resume</a></li>
+            <li><a href="works.html" class="navwork">Work</a></li>
         </ul>
  </nav>
 <div class="workbody">
@@ -22,21 +22,21 @@
     <h1>My works</h1>
     </div>
     <div class="first">
-      <a href=first.html><h2>My First Prototype</h2>
+      <a href="first.html"><h2>My First Prototype</h2>
       <picture>
         <img srcset="images/homepogo3x.png 1029w, images/homepogo2x.png 686w, images/homepogo.png 343w" sizes="(min-width: 960px) 31.7vw, (min-width: 500px) 47vw, 100%" src="images/homepogo_small.png" alt="finished prototype">
       </picture>
       <p>Have a look at my first attempt at wireframes, sitemaps, and other things.</p></a>
     </div>
     <div class="redesign">
-      <a href=reddit.html><h2>Redesigning Reddit</h2>
+      <a href="reddit.html"><h2>Redesigning Reddit</h2>
         <picture>
           <img srcset="images/rebrand3x.png 1029w, images/rebrand2x.png 686w, images/rebrand.png" sizes="(min-width: 960px) 31.7vw, (min-width: 500px) 47vw, 100%"src="images/rebrand_small.png" alt="rebranding">
         </picture>
       <p>Another expedition into the prototyping process, but now with the added task of redesigning the whole brand.</p></a>
     </div>
     <div class="teado">
-      <a href=teado.html><h2>Redesigning Tea-Do</h2>
+      <a href="teado.html"><h2>Redesigning Tea-Do</h2>
       <picture>
         <img srcset="images/contact3x.png 1029w, images/contact2x.png 686w, images/contact.png 343w" sizes="(min-width: 960px) 64.1vw, (min-width: 500px) 96vw, 100%" src="images/contact_small.png" alt="homepage">
       </picture>
