Touching up some spacing

--- a/about_me.html
+++ b/about_me.html
@@ -22,7 +22,8 @@
                 <div class="abouttext">
                     <div class="img">
                         <picture>
-                            <source media="(min-width: 650px)" srcset="images/me_large.png">
+                            <source media="(min-width: 960px)" srcset="images/me_x3.png">
+                            <source media="(min-width: 650px)" srcset="images/me_x2.png">
                             <img src="images/me_small.png" alt="headshot">
                         </picture>
                     </div>
