--- a/reddit.html
+++ b/reddit.html
@@ -16,7 +16,7 @@
             <li><a href="works.html" class="navwork">Work</a></li>
         </ul>
  </nav>
-<div class="casestudy">
+<div class="casestudy" id="reddit">
   <div class="titlecs">
     <h1>Redesigning Reddit</h1>
   </div>
@@ -24,7 +24,10 @@
   <div class="task">
     <h2>My Task</h2>
     <picture>
-      <img srcset="images/appflow_small3x.png 1029w, images/appflow_small2x.png 686w, images/appflow_small.png 343w" sizes="(min-width: 960px) 58.6vw, (min-width: 650px) 62.2vw, 100%" src="images/appflow_small.png" alt="app flow">
+      <img srcset="images/appflow_small3x.png 1029w, 
+      images/appflow_small2x.png 686w, 
+      images/appflow_small.png 343w" 
+      src="images/appflow_small.png" alt="app flow">
     </picture>
     <p>For this project, we were to create a complete redesign of an app, including prototypes and micro-interactions. I was 
       redesigning Reddit, an app focused on connecting users via communities. I really wanted to lean into a space concept, as 
@@ -34,7 +37,10 @@
  <div class="middle">
     <h2>Making a plan</h2>
     <picture>
-      <img srcset="images/rebrand3x.png 1029w, images/rebrand2x.png 686w, images/rebrand.png" sizes="(min-width: 960px) 38.4vw, (min-width: 650px) 96vw, 100%" src="images/rebrand_small.png" alt="rebranding">
+      <img srcset="images/rebrand3x.png 1029w, 
+      images/rebrand2x.png 686w, 
+      images/rebrand.png" 
+      src="images/rebrand_small.png" alt="rebranding">
     </picture>
     <p>      
       So I had an idea of what I should do, but how would I start to accomplish the goal I had set? I made a plan by creating an 
