--- a/teado.html
+++ b/teado.html
@@ -16,7 +16,7 @@
             <li><a href="works.html" class="navwork">Work</a></li>
         </ul>
  </nav>
-<div class="casestudy">
+<div class="casestudy" id="teado">
   <h1 class="title">Redesigning Tea-Do</h1>
 
   <div class="task">
@@ -24,7 +24,11 @@
       <h2>Our task</h2>
     </div>
     <picture>
-      <img srcset="images/originalsite3x.png 1029w, images/originalsite2x.png 686w, images/originalsite1x.png 343w" sizes="(min-width: 960px) 58.5vw, (min-width: 650px) 62.2vw, 100%" src="images/originalsite_small.png" alt="original site">
+      <img srcset="images/originalsite3x.png 1029w, 
+      images/originalsite2x.png 686w, 
+      images/originalsite1x.png 343w" 
+      sizes="(min-width: 960px) 58.6vw, (min-width: 650px) 48.7vw, 100%" 
+      src="images/originalsite_small.png" alt="original site">
     </picture>
     <p>For this project, My group and I were to collaborate to prototype a redesign for a website. We chose to do our project on a 
       website for the bubble tea restaurant, Tea-Do. We wanted to gather test research on how the website functioned for the user so 
@@ -33,7 +37,10 @@
  <div class="middle">
     <h2 class="midp">User Testing</h2>
     <picture>
-    <img srcset="images/usertesting3x.png 1029w, images/usertesting2x.png 686w, images/usertesting.png 343w" sizes="(min-width: 960px) 38.4vw, (min-width: 650px) 96vw, 100%" src="images/usertesting_small.png" alt="user testing" class="midpic">
+    <img srcset="images/usertesting3x.png 1029w, 
+    images/usertesting2x.png 686w, 
+    images/usertesting.png 343w" 
+    src="images/usertesting_small.png" alt="user testing" class="midpic">
     </picture>
     <p class="midp">      
       We used Usertesting.com to create our test. We wanted to ask the user to do things that would be close to what a normal user 
@@ -47,7 +54,10 @@
   <div class="ending">
     <h2 class="endp">Tea-mwork makes the website work</h2>
     <picture>
-      <img srcset="images/contact3x.png 1029w, images/contact2x.png 686w, images/contact.png 343w" sizes="(min-width: 960px) 56.7vw, (min-width: 650px) 96vw, 100%" src="images/contact_small.png" alt="homepage">
+      <img srcset="images/contact3x.png 1029w, 
+      images/contact2x.png 686w, 
+      images/contact.png 343w" 
+      src="images/contact_small.png" alt="homepage">
     </picture>
     <p class="endp">Going off of this information, we got to work on creating the prototype. We had pretty good teamwork and we were able to get
       through the work with relative ease (though it may have gone a bit late into the night). We decided it would be a good idea 
