Added the JSproject, trimmed some fat, watered the crops

--- a/first.html
+++ b/first.html
@@ -26,7 +26,7 @@
         <img srcset="images/casestew3x.png 1029w, 
         images/casestew2x.png 686w, 
         images/casestew.png 343w" 
-        src="images/casestew_small.png" alt="card sort">
+        src="images/casestew.png" alt="card sort">
       </picture>
       <p>For this project, we were to create a proper prototype for a website, and for me the website in question was Gamepress, 
         A site for mobile games with an emphasis on strategy. My focus was on the Pokemon Go portion of the page, since the whole site 
@@ -38,7 +38,7 @@
         <img srcset="images/sitemap3x.png 1029w, 
         images/sitemap2x.png 686w, 
         images/sitemap.png 343w" 
-        src="images/sitemap_small.png" alt="sitemap">
+        src="images/sitemap.png" alt="sitemap">
       </picture>
       <p>      
         To start, I was instructed to do a case study with about three people and use the information gleaned off of that to make a
@@ -57,7 +57,7 @@
       <img srcset="images/homepogo3x.png 1029w, 
       images/homepogo2x.png 686w, 
       images/homepogo.png 343w" 
-      src="images/homepogo_small.png" alt="finished prototype">
+      src="images/homepogo.png" alt="finished prototype">
     </picture>
     <p>Next it was time to come up with some ideas for wireframes. This wasn't too bad, as I could do it on paper. This meant I 
         could just draw it up when inspiration hit. This would have been nice, had inspiration decided to hit a bit more often than 
