--- a/reddit.html
+++ b/reddit.html
@@ -39,8 +39,8 @@
     <picture>
       <img srcset="images/rebrand3x.png 1029w, 
       images/rebrand2x.png 686w, 
-      images/rebrand.png" 
-      src="images/rebrand_small.png" alt="rebranding">
+      images/rebrand.png 343w" 
+      src="images/rebrand.png" alt="rebranding">
     </picture>
     <p>      
       So I had an idea of what I should do, but how would I start to accomplish the goal I had set? I made a plan by creating an 
