--- a/works.html
+++ b/works.html
@@ -27,7 +27,7 @@
         <img srcset="images/homepogo3x.png 1029w, 
         images/homepogo2x.png 686w, 
         images/homepogo.png 343w" 
-        src="images/homepogo_small.png" alt="finished prototype">
+        src="images/homepogo.png" alt="finished prototype">
       </picture>
       <p>Have a look at my first attempt at wireframes, sitemaps, and other things.</p></a>
     </div>
@@ -37,7 +37,7 @@
           <img srcset="images/rebrand3x.png 1029w, 
           images/rebrand2x.png 686w, 
           images/rebrand.png 343w" 
-          src="images/rebrand_small.png" alt="rebranding">
+          src="images/rebrand.png" alt="rebranding">
         </picture>
       <p>Another expedition into the prototyping process, but now with the added task of redesigning the whole brand.</p></a>
     </div>
@@ -47,9 +47,20 @@
         <img srcset="images/contact3x.png 1029w, 
         images/contact2x.png 686w, 
         images/contact.png 343w" 
-        src="images/contact_small.png" alt="homepage">
+        src="images/contact.png" alt="homepage">
       </picture>
       <p>A team effort to create a redesign for a boba tea shop in Philadelphia.</p></a>
+    </div>
+    <div class="jsproject">
+      <a href="IDM231-pcn23/whats_for_dinner.html"><h2>What's for dinner?</h2>
+      <picture>
+        <img srcset="images/jsproject3x.png 1029w,
+        images/jsproject2x.png 686w,
+        images/jsproject1x.png 343w"
+        src="images/jsproject1x.png" alt="homepage">
+      </picture>
+      <p>A project that I created while learning how to use JavaScript.</p>
+      </a>
     </div>
   </div>
 </div>
