--- a/teado.html
+++ b/teado.html
@@ -28,7 +28,7 @@
       images/originalsite2x.png 686w, 
       images/originalsite1x.png 343w" 
       sizes="(min-width: 960px) 58.6vw, (min-width: 650px) 48.7vw, 100%" 
-      src="images/originalsite_small.png" alt="original site">
+      src="images/originalsite1x.png" alt="original site">
     </picture>
     <p>For this project, My group and I were to collaborate to prototype a redesign for a website. We chose to do our project on a 
       website for the bubble tea restaurant, Tea-Do. We wanted to gather test research on how the website functioned for the user so 
@@ -40,7 +40,7 @@
     <img srcset="images/usertesting3x.png 1029w, 
     images/usertesting2x.png 686w, 
     images/usertesting.png 343w" 
-    src="images/usertesting_small.png" alt="user testing" class="midpic">
+    src="images/usertesting.png" alt="user testing" class="midpic">
     </picture>
     <p class="midp">      
       We used Usertesting.com to create our test. We wanted to ask the user to do things that would be close to what a normal user 
