Updates for Co-op

--- a/resume.html
+++ b/resume.html
@@ -43,6 +43,12 @@
     <div class="Experience">
     <h2>Experience</h2>
     <ul>
+        <li>Art Sphere Inc. - Web Design Coop - Remote Position - March 2021 - September 2021
+            <ul>
+                <li>Arranged content on the website to make it more appealing, specifically the Staff List page and Technology pages.</li>
+                <li>Coordinated with team to make decisions on the style of the website.</li>
+            </ul>
+        </li>
         <li> Corningware, Corelle, and More - Sales Associate -  Hanover, MD - June 2019 - November 2020
             <ul>
                 <li>Provided outstanding customer service by assisting customers in finding or selecting items, and giving recommendations.</li>
@@ -77,7 +83,7 @@
         <li>Creative thinking</li>
         <li>Interpersonal skills</li>
         <li>Proficient in Microsoft 360 products and Adobe Suite products</li>
-        <li>Capable of coding in HTML/CSS</li>
+        <li>Capable of coding in HTML/CSS, JavaScript, and PHP/MySQL</li>
     </ul>
     <a href="#top"><img src="images/backtotop.png" alt="back to top"></a>
     </div>
