--- a/works.html
+++ b/works.html
@@ -42,14 +42,11 @@
       <p>Another expedition into the prototyping process, but now with the added task of redesigning the whole brand.</p></a>
     </div>
     <div class="teado">
-      <a href="teado.html"><h2>Redesigning Tea-Do</h2>
-      <picture>
-        <img srcset="images/contact3x.png 1029w, 
-        images/contact2x.png 686w, 
-        images/contact.png 343w" 
-        src="images/contact.png" alt="homepage">
-      </picture>
-      <p>A team effort to create a redesign for a boba tea shop in Philadelphia.</p></a>
+      <a href="https://parkerishere.com/IDM232/case_study.php".html"><h2>Recipe & Me</h2>
+        <picture>
+          <img src="images/Alpha.png" alt="Alpha build">
+        </picture>
+        <p>This is a case study on my recipe site that was made using php.</p></a>
     </div>
     <div class="jsproject">
       <a href="IDM231-pcn23/whats_for_dinner.html"><h2>What's for dinner?</h2>
@@ -62,6 +59,19 @@
       <p>A project that I created while learning how to use JavaScript.</p>
       </a>
     </div>
+  </div>
+  <div class="items">
+    <div class="title">
+    </div>
+    <div class="teado">
+      <a href="teado.html"><h2>Redesigning Tea-Do</h2>
+        <picture>
+          <img srcset="images/contact3x.png 1029w, 
+          images/contact2x.png 686w, 
+          images/contact.png 343w" 
+          src="images/contact.png" alt="homepage">
+        </picture>
+        <p>A team effort to create a redesign for a boba tea shop in Philadelphia.</p></a>
   </div>
 </div>
 </body>
