--- a/about_me.html
+++ b/about_me.html
@@ -29,25 +29,14 @@
                     </div>
                     <div class="text">
                         <div class="textsmall">
-                            <p class="one">I'm Parker Nix, a second-year undergrad student in the IDM program at Drexel University. I've just started coding, and this very 
-                             website is my first shot at it! So far, I feel like I've been able to grasp the basics, and I'd be ready to apply the knowledge 
-                             I gained from building this portfolio page to a different kind of website. I love food and cooking, and I also like trying new 
-                            things! I like to think I'm a bit of a wild card.</p>
+                            <p class="one">Thanks for clicking through my portfolio! This website is a reflection of my professional progress so far.</p>
                         </div>
-                        <p>Aside from this, I also play the Violin. I've been playing for about ten years now and I was even in a major for it in 
-                        middle school (It was a public school, but they had a program where you'd go to the school for a specific art major). I used 
-                        to think I'd want to have a career in music, but I pretty quickly changed my mind because there are so many other options and 
-                        it just didn't feel like the right choice for me somehow. Still, I love playing and I'm currently in Drexel's orchestra, which 
-                        has been a great place to keep working on getting better.</p>
-                        <p>In high school, I also was part of an arts program, under the film major. I did find some enjoyment in cinematography and 
-                        editing and all, but again, it just didn't feel like my thing. My brother is going to be graduating from Drexel, and he's in the 
-                        film program here. He's definitely much better with all that stuff than I am, but I at least know my way around a few of the Adobe 
-                        programs and I can probably(?) get a good shot or two.</p>
-                        <p>As for experience with coding, I can't say I have too much other than this project. I've messed around with it here and there, 
-                        but I still feel really new to the whole thing. My dad did some studying with a few books and some other resources, so he's also 
-                        showed me a few things. We also had a few lessons about it in our film program (at some point it became the "Film and New Media" 
-                        major, but I was a senior at that point), but to be quite honest I don't remember much about it other than that we were using 
-                        Processing. However, after coding this project, I think I have a better understanding of the process to get a website up and running.</p>
+                        <p>As for me, I'm a UX Engineer with experience in both design and development. I'm currently in an undergrad program for User
+                            Experience and Interaction Design. This has been really helpful for me to learn more about how to create an experience that 
+                            really supports the user and makes them feel satisfied.</p>
+                        <p>IIn my free time, I love playing the violin, cooking and eating, and playing video games. Other than that, I love to learn 
+                            about new things and I'm always watching videos about pretty much anything from cooking a recipe to the history of HTML to 
+                            the ins and outs of life beyond earth (a fun but somewhat depressing topic)!</p>
                     </div>
                 </div>  
             </div>
